# gpu-diamond

./: .gitignore  CMakeLists.txt  Makefile  README.md  TEACHING.md  gpu_diamond.c  gpu_diamond.cu  gpu_diamond.h  test_gpu_diamond.c
src/: Makefile
src/basic/: gpu_diamond.c
src/data/: sequence.c  sequence.h
src/dp/: ungapped.c  ungapped.h  ungapped_cuda.cuh
src/masking/: seg.c  seg.h
src/output/: output_format.c  output_format.h
src/run/: run.c  run.h
src/search/: gpu_diamond.cu  gpu_diamond_fast.cu  gpu_diamond_fast.h  gpu_diamond_fast_v2.cu
src/stats/: karlin_altschul.c  karlin_altschul.h
src/test/: test_gpu_diamond.c  test_gpu_diamond_fast.c
